--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Will Be My Valentine,babe?</title>
+  <title>Will You Be My Valentine?</title>
+
   <style>
     body {
       height: 100vh;
@@ -11,10 +11,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #ff758c, #ff7eb3);
       font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
+
+      /* Background image + overlay (optional) */
+      background:
+        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+        url("bg.jpg") no-repeat center center/cover;
     }
+
     .box {
       background: white;
       padding: 40px 50px;
@@ -23,10 +28,12 @@
       box-shadow: 0 15px 30px rgba(0,0,0,0.25);
       z-index: 10;
     }
+
     h1 {
       color: #ff3b6f;
       margin-bottom: 25px;
     }
+
     button {
       padding: 12px 28px;
       font-size: 16px;
@@ -35,15 +42,18 @@
       cursor: pointer;
       margin: 10px;
     }
+
     .yes {
       background-color: #ff3b6f;
       color: white;
     }
+
     .no {
       background-color: #ddd;
       position: absolute;
     }
-    /* Shake + Spin animation */
+
+    /* Shake + spin animation */
     @keyframes shakeSpin {
       0% { transform: translateX(0) rotate(0); }
       25% { transform: translateX(-5px) rotate(-10deg); }
@@ -51,18 +61,20 @@
       75% { transform: translateX(-5px) rotate(-10deg); }
       100% { transform: translateX(0) rotate(0); }
     }
+
     .shake {
       animation: shakeSpin 0.4s;
     }
+
     /* Confetti */
     .confetti {
       position: fixed;
       width: 10px;
       height: 10px;
-      background-color: red;
       top: -10px;
       animation: fall 3s linear forwards;
     }
+
     @keyframes fall {
       to {
         transform: translateY(110vh) rotate(720deg);
@@ -70,38 +82,47 @@
     }
   </style>
 </head>
+
 <body>
 
   <div class="box" id="box">
-    <h1>💘 Will You Be My Valentine? 💘</h1>
+    <h1>💘 Will You Be My Valentine, Anchal? 💘</h1>
+
     <button class="yes" onclick="yesClicked()">Yes 💕</button>
     <button class="no" id="noBtn" onmouseover="noHover()">No 🙄</button>
+
     <p id="message"></p>
   </div>
+
+  <!-- Background Music -->
+  <audio id="bgm" loop>
+    <source src="tere-mere.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
     const noBtn = document.getElementById("noBtn");
     const messages = ["HEY!", "NOPE!", "TRY AGAIN 😜", "EXCUSE ME?!"];
 
     function noHover() {
-      // Random position
       const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
       const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
 
       noBtn.style.left = x + "px";
       noBtn.style.top = y + "px";
 
-      // Shake + spin
       noBtn.classList.add("shake");
       setTimeout(() => noBtn.classList.remove("shake"), 400);
 
-      // Screaming text
       noBtn.innerText = messages[Math.floor(Math.random() * messages.length)];
     }
 
     function yesClicked() {
+      const music = document.getElementById("bgm");
+      music.play().catch(err => console.log(err));
+
       document.getElementById("box").innerHTML =
-        "<h1>YAY!!! 💖🥰</h1><p>You’re officially my Valentine 😏</p>";
+        "<h1>YAY!!! 💖🥰</h1><p>You’re officially my Valentine ❤️</p>";
+
       confettiBoom();
     }
 
@@ -111,27 +132,16 @@
         confetti.classList.add("confetti");
         confetti.style.left = Math.random() * 100 + "vw";
         confetti.style.backgroundColor =
-          ["#ff3b6f", "#ffd166", "#06d6a0", "#118ab2"][Math.floor(Math.random() * 4)];
-        confetti.style.animationDuration = (Math.random() * 2 + 2) + "s";
-        document.body.appendChild(confetti);
+          ["#ff3b6f", "#ffd166", "#06d6a0", "#118ab2"]
+          [Math.floor(Math.random() * 4)];
+        confetti.style.animationDuration =
+          (Math.random() * 2 + 2) + "s";
 
+        document.body.appendChild(confetti);
         setTimeout(() => confetti.remove(), 3000);
       }
     }
-    
   </script>
-<!-- Background Music -->
-<audio id="bgm" loop>
-  <source src="tere-mere.mp3" type="audio/mpeg">
-</audio>
-
-<script>
-  // Play music after first user interaction (browser requirement)
-  document.body.addEventListener('click', function () {
-    const music = document.getElementById('bgm');
-    music.play();
-  }, { once: true });
-</script>
 
 </body>
 </html>
