Update title and button text in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Will You Be My Valentine , babe ?</title>
+  <title> Will You Be My Valentine , babe ?</title>
 
   <style>
     body {
@@ -17,7 +17,7 @@
       /* Background image + overlay (optional) */
       background:
         linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-        url("bg.jpg") no-repeat center center/cover;
+        url("bg2.jpg") no-repeat center center/cover;
     }
 
     .box {
@@ -86,7 +86,7 @@
 <body>
 
   <div class="box" id="box">
-    <h1>💘 Will You Be My Valentine, Anchal? 💘</h1>
+    <h1>💘 Will You Be My Valentine, BABE? 💘</h1>
 
     <button class="yes" onclick="yesClicked()">Yes 💕</button>
     <button class="no" id="noBtn" onmouseover="noHover()">No 🙄</button>
@@ -101,7 +101,7 @@
 
   <script>
     const noBtn = document.getElementById("noBtn");
-    const messages = ["HEY!", "NOPE!", "TRY AGAIN 😜", "EXCUSE ME?!"];
+    const messages = ["HEY!","Pit kar manogi ", "NOPE!", "TRY AGAIN 😜", "EXCUSE ME?!"];
 
     function noHover() {
       const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
