--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       /* Background image + overlay (optional) */
       background:
         linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-        url("bg2.jpg") no-repeat center center/cover;
+        url("bg.jpg") no-repeat center center/cover;
     }
 
     .box {
